add document swagger for some endpoints
