# cmd/api/healthy.go
@@ -6,6 +6,15 @@ import (
 	"github.com/MohammadBohluli/social-app-go/pkg"
 )
 
+// HealthCheck godoc
+//
+//	@Summary		Health check endpoint
+//	@Description	Checks if the API is running
+//	@Tags			health
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	map[string]string	"API is healthy"
+//	@Router			/health [get]
 func (app application) healthCheckHandler(w http.ResponseWriter, r *http.Request) {
 	data := map[string]string{
 		"status": "every thing is OK 😊",
